# esce_ml

./: .gitignore  Makefile  README.md  environment.yaml  environment.yml  interactive_viewer.py  models.py  paper.md  pyproject.toml  requirements.txt  run.py  server.py  setup.cfg  setup.py  vis.py
.github/workflows/: ci.yaml  draft-pdf.yaml  python-app.yaml  qa.yaml  tests.yaml
config/: README.md  config.schema.yaml  config.yaml  experiments.yaml  grids.schema.yaml  grids.yaml  style.schema.yaml  style.yaml
config/grids/: default.yaml  minimal.yaml
crit4nonlin/: command_line.py  data.py  grid.py  models.py  run.py  vis.py
docs/source/: conf.py  index.rst
esce/: __init__.py  aggregate.py  base_models.py  command_line.py  confound_regression.py  data.py  extrapolate.py  fit.py  generate_splits.py  grid.py  models.py  plot.py  plot_hps.py  predefined_datasets.py  prepare_data.py  run.py  sampling.py  util.py  validate_config.py  vis.py
example/: cni.csv  custom_example_config.yaml  example_config.yaml  mnist_example_config.yaml  x_a.csv  x_b.csv  y.csv
example/yaml-files/: all_targets_confounding.yaml  audit_c_confounding.yaml  base_sex_age.yaml  matchedbothdf_sex_age.yaml  run_code.txt
extras/: Makefile  main.cc
joss/: paper.bib  paper.md
resources/test/features/: x.csv
resources/test/matching/: y.csv
tests/: __init__.py  conftest.py  sampling.py  snakefile_submodule  test_aggregate.py  test_base_models.py  test_config.yaml  test_confound_regression.py  test_extrapolate.py  test_fit.py  test_fit_model.py  test_generate_splits.py  test_gram.py  test_integration_full_pipeline.py  test_models.py  test_plot.py  test_plot_hps.py  test_predefined_datasets.py  test_prepare_data.py  test_sampling.py  test_snakefile_submodule.smk  test_snakemake.py
workflow/: Snakefile
workflow/envs/: environment.yaml
workflow/scripts/: aggregate.py  base_models.py  confound_regression.py  download_mnist.py  extrapolate.py  fit.py  fit_model.py  generate_splits.py  models.py  plot.py  plot_hps.py  prepare_data.py  validate_config.py
