[tool.poetry]
name = "esce"
version = "0.1.2"
description = "Tools for eastimating and extrapolating learning curves."
authors = ["Marc-Andre Schulz <marc-andre.schulz@charite.de>"]
license = "GPLv3" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22"  
scikit-learn = "^1.2"  
pandas = "^1.5"
scipy = "^1.9"
imbalanced-learn = "^0.11"
plotly = "^5.8"
kaleido = "0.2.1"  
pyyaml = "^6.0"
snakemake = "^7.30"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^22.0"
flake8 = "^5.0"
sphinx = "^6.0"
sphinx_rtd_theme = "^1.0"


[tool.pytest.ini_options]
norecursedirs = ".snakemake"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
